fix: fix value of `@dls-progress-icon-spacing-bar`

--- a/tokens/components/progress.less
+++ b/tokens/components/progress.less
@@ -22,7 +22,7 @@
 @dls-progress-border-radius-m: @dls-progress-track-width-m / 2;
 
 @dls-progress-track-spacing-bar: @dls-padding-unit * 2;
-@dls-progress-icon-spacing-bar: @dls-padding-unit * 1;
+@dls-progress-icon-spacing-bar: @dls-padding-unit * 3;
 
 /* Colors */
 @dls-progress-track-color: @dls-color-gray-4;
